--- a/generator/templates/generator/delete_generation_confirm.html
+++ b/generator/templates/generator/delete_generation_confirm.html
@@ -1,4 +1,5 @@
 {% extends 'generator/index.html' %}
+{% load custom_filters %}
 {% block content %}
 <div class="container py-5">
     <div class="row justify-content-center">
@@ -12,7 +13,7 @@
                     <div class="mb-3 text-start">
                         <strong>Тема:</strong> {{ gen.topic }}<br>
                         <strong>Текст:</strong> <span style="white-space: pre-line">{{ gen.result }}</span>
-                        {% if gen.image_url %}<br><img src="{{ gen.image_url }}" alt="AI image" class="img-fluid rounded mt-2" style="max-height:120px;">{% endif %}
+                        {% if gen.image_url %}<br><img src="{{ gen.image_url|media_urls_absolute:request }}" alt="AI image" class="img-fluid rounded mt-2" style="max-height:120px;">{% endif %}
                     </div>
                     <form method="post">
                         {% csrf_token %}
